--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,13 @@ spring.jpa.hibernate.use-new-id-generator-mappings=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.main.banner-mode=off
-logging.level.root=warn
+#logging.level.root=warn
 
 #spring.mvc.view.prefix=/WEB-INF/jsp/
 #spring.mvc.view.suffix=.jsp
+
+# Logging Details
+logging.file.name=C:/Users/akhil/Desktop/WarehouseProject/MyLogs/akhil.log
+logging.logback.rollingpolicy.max-file-size=15MB
+logging.logback.rollingpolicy.max-history=15
+logging.level.com.av.controller=DEBUG
